# httpknock

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  default.nix  knock.nix  meson.build  meson.options  pyproject.toml
.github/workflows/: tests.yml
android/: main.py  pubspec.yaml  pyproject.toml  release.sh
scripts/: release.sh
src/: addcred.c  db.c  db.h  knock-cmd.c  knock.c
tests/: conftest.py  mocks.c  requirements-test.txt  test_server.py  testlib.py
